[workspace]
members = [
    "madsim",
    "madsim-aws-sdk-s3",
    "madsim-macros",
    "madsim-tokio",
    "madsim-tonic",
    "madsim-tonic-build",
    "madsim-etcd-client",
    "madsim-rdkafka",
    "tonic-example",
]
resolver = "2"


[workspace.dependencies]
tokio = { git = "https://github.com/xcloudtech/tokio.git", package = "tokio", tag = "xvv-1.32.0" }
